Prevent digital preview thumbnails from overlapping

--- a/components/explorers/Explorers.module.css
+++ b/components/explorers/Explorers.module.css
@@ -486,7 +486,6 @@
 }
 
 .downloadArtworkPanel,
-.downloadPreviewPanel,
 .downloadFeaturedArtwork {
   aspect-ratio: 1 / 1;
 }
